feat: flat strong, list, title markups

--- a/reset.css
+++ b/reset.css
@@ -41,7 +41,8 @@ main {
  * Remove default title browser margin
  * Remove default title browser UGLY bold font weight
  */
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, h6 {
+    font-size: 1rem;
     margin: 0;
     font-weight: normal;
 }
@@ -51,6 +52,7 @@ h1, h2, h3, h4, h5 {
  */
 a {
     background-color: transparent;
+    text-decoration: none;
 }
 
 /**
@@ -58,7 +60,14 @@ a {
  */
 b,
 strong {
-    font-weight: bolder;
+    font-weight: normal;
+}
+
+/**
+ * Remove list style dote by default
+ */
+ul {
+    list-style: none;
 }
 
 /**
